# demo-tools

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/demo_tools/: _resources.py  adopt.py  cli.py  fleet.py  scaffold.py
src/demo_tools/_data/starters/nextjs-fastapi/api/: Dockerfile  fly.toml.template  main.py
src/demo_tools/_data/starters/nextjs-fastapi/web/: Dockerfile  fly.toml.template
src/demo_tools/_data/template/: .dockerignore  compose.yml.jinja  copier.yml  fly.toml.jinja  justfile
src/demo_tools/_data/template/.github/workflows/: fly-deploy.yml
src/demo_tools/_data/template/infra/fly/: cloudflare_dns.sh.jinja  db-create.sh.jinja  deploy.sh.jinja  destroy.sh.jinja  open.sh.jinja  secret.sh.jinja  status.sh.jinja
src/demo_tools/stacks/: __init__.py  bare.py  fastapi.py  nextjs.py  nextjs_fastapi.py  static.py  streamlit.py
starters/fastapi/: main.py
starters/nextjs-fastapi/api/: Dockerfile
starters/streamlit/: streamlit_app.py
template/: .gitignore  Dockerfile.jinja  README.md.jinja  copier.yml
template/infra/fly/: logs.sh.jinja  ssh.sh.jinja  start.sh.jinja  stop.sh.jinja
tests/: test_adopt_detection.py  test_adopt_overlay.py  test_cli.py  test_fleet.py  test_scaffold_all_stacks.py  test_scaffold_bare_e2e.py  test_stacks_bare.py  test_stacks_fastapi.py  test_stacks_nextjs.py  test_stacks_nextjs_fastapi.py  test_stacks_static.py  test_stacks_streamlit.py  test_sync.py  test_template_render.py
