[project]
name = "demo-tools"
version = "0.1.0"
description = "CLI + Copier template for spinning up and deploying demo web apps to Fly.io"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Bosire Nyakundi" }]
dependencies = [
    "typer>=0.12",
    "copier>=9.4",
    "rich>=13.7",
]

[project.scripts]
demo-init = "demo_tools.cli:init_app"
demo = "demo_tools.cli:demo_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_tools"]

[tool.hatch.build]
include = [
    "src/demo_tools/**",
]

# Bundle the Copier template and shipped starters as package data so the
# installed wheel contains them at runtime (resolved via _resources.py).
[tool.hatch.build.targets.wheel.force-include]
"src/demo_tools/_data/template" = "demo_tools/_data/template"
"src/demo_tools/_data/starters" = "demo_tools/_data/starters"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]
